<resources

    >
    <string name="app_name">视珍宝筛查</string>
    <string name="textview1">address</string>
    <string name="textview2">住址：</string>
    <string name="textview3">身份证号：</string>
    <string name="textview4">TextView</string>
    <string name="button">保存并退出</string>
    <string name="Button">不满意重拍</string>
    <string name="textview5">TextView</string>
    <string name="textview6">民族：</string>
    <string name="textview7">TextView</string>
    <string name="textview8">出生日期：</string>
    <string name="textview9">性别：</string>
    <string name="textview10">TextView</string>
    <string name="textview11">姓名：</string>
    <string name="textview12">TextView</string>
    <string name="todo">TODO</string>
    <string name="cannotReturn">已经为第一级目录，无法进行返回</string>
    <string name="recover_no_choise">请先选择需要恢复的文件</string>
    <string name="image_cancel">取消</string>
    <string name="image_dialog_automatic">已帮助您自动选择</string>
    <string name="image_dialog_loading">正在加载视珍宝主机...</string>
    <string name="image_set_wifi">设置WIFI</string>
    <string name="image_connect_wifi">正在连接局域网 WIFI... </string>
    <string name="notlinkWIFI">没有连接上指定的WIFI，请检查WIFI设置是否正确。</string>
    <string name="image_set_wifi_message">未检测到可用的视珍宝主机，请点击下方“WIFI设置”，连接可用的视珍宝主机</string>
    <string name="image_set_wifi_sure">WIFI设置</string>
    <string name="image_patients_last">已经是最后一页了</string>
    <string name="image_patients_first">已经是第一页了</string>
    <string name="image_get_image">图像获取</string>
    <string name="image_camera">照相机</string>
    <string name="image_search">搜索</string>
    <string name="image_timing_finash">计时已完成，可以重新进行计时</string>
    <string name="image_artword">原图</string>
    <string name="image_acetic_acid_white">醋酸白</string>
    <string name="image_Lipiodol">碘</string>
    <string name="image_duration_30seconds">时长30秒</string>
    <string name="image_duration_one">时长1分钟</string>
    <string name="image_duration_minite">时长1分钟30秒</string>
    <string name="image_duration_two">时长2分钟</string>
    <string name="image_duration_three">时长3分钟</string>
    <string name="image_duration_five">时长5分钟</string>
    <string name="image_duration_six">时长6分钟</string>
    <string name="image_duration_eight">时长8分钟</string>
    <string name="image_duration_ten">时长10分钟</string>
    <string name="image_pickup_one">时长1分钟</string>
    <string name="image_pickup_three">时长3分钟</string>
    <string name="image_pickup_five">时长4分钟</string>
    <string name="image_pickup_six">时长5分钟</string>
    <string name="image_pickup_ten">时长10分钟</string>
    <string name="image_interval_ten">间隔10秒</string>
    <string name="image_interval_fifteen">间隔15秒</string>
    <string name="image_interval_twenty">间隔20秒</string>
    <string name="image_interval_thirty">间隔30秒</string>
    <string name="image_handle_message">正在处理拍摄的照片...</string>
    <string name="image_photograph_success">拍照成功</string>
    <string name="image_photograph_error">拍照失败</string>
    <string name="image_photograph_type">设置拍照模式，每次</string>
    <string name="image_photograph_one">只拍一张</string>
    <string name="image_photograph_more">连续拍照</string>
    <string name="image_photograph_in">在</string>
    <string name="image_photograph_interval">分钟内每隔</string>
    <string name="image_photograph_continuition">秒连续拍照</string>
    <string name="image_pickup_begin">已经开始录像</string>
    <string name="image_pickup_end">已完成录像</string>
    <string name="image_pickup_error">命令执行失败</string>
    <string name="image_picture_Testing">检测到该照片不清晰,是否需要重新拍照?</string>
    <string name="image_picture_Remake">重拍</string>
    <string name="image_picture_Remake_no">不重拍</string>
    <string name="image_picture_save_no">没有保存该照片</string>
    <string name="image_picture_save_success">照片保存成功</string>
    <string name="image_timing_begin">开始计时</string>
    <string name="image_timing_clear">停拍</string>
    <string name="image_uploading">上传</string>
    <string name="import_Success">上传完成</string>
    <string name="image_setting_light_white">白光</string>
    <string name="image_setting_light_green">绿光</string>
    <string name="image_snapshot_record">拍照录像</string>
    <string name="image_setting_Lipiodol_snapshot">碘油设置</string>
    <string name="image_setting">设置</string>
    <string name="image_setting_AP">设置AP模式</string>
    <string name="image_setting_STA">设置STA模式</string>
    <string name="image_setting_STA_SignalStrength">信号强度</string>
    <string name="image_setting_pickup">录像设置</string>
    <string name="image_setting_snapshot">醋酸白设置</string>
    <string name="image_setting_snapshot_dy">碘油设置</string>
    <string name="iamge_setting_button_left">按键靠右</string>
    <string name="image_setting_pickup_time">设置录像时间，每次录制</string>
    <string name="image_setting_pickup_minute">分钟</string>
    <string name="image_setting_AP_dialog">设为AP模式</string>
    <string name="image_setting_AP_name">请输入AP的wifi名称</string>
    <string name="image_setting_AP_password">请输入AP的wifi密码</string>
    <string name="image_setting_AP_message1">设置AP</string>
    <string name="image_setting_AP_message2">wifi名称</string>
    <string name="image_setting_AP_message3">wifi密码</string>
    <string name="image_setting_AP_password_updata">修改wifi密码</string>
    <string name="image_setting_success">设置成功</string>
    <string name="image_setting_success_message">设置成功，重启后生效</string>
    <string name="image_setting_faild">设置失败</string>
    <string name="image_setting_STA_wifi">当前设备没有搜索到有效的无线网络</string>
    <string name="image_setting_STA_wifi_password">请输入wifi密码</string>
    <string name="image_setting_STA_message">设置STA</string>
    <string name="image_setting_STA_dialog">设为STA模式</string>
    <string name="image_setting_restart">确定重启？</string>
    <string name="image_setting_restart_message">重启后生效</string>
    <string name="image_setting_restart_successs">设备已重启</string>
    <string name="image_setting_restart_faild">重启失败</string>
    <string name="image_setting_refresh">刷新</string>
    <string name="image_manage_picture">图片</string>
    <string name="image_manage_pickup">视频</string>
    <string name="image_manage_delete_title_sd">您确定要删除选中的内容吗?</string>
    <string name="image_manage_delete_title">您的数据库中已有数据，如果进行数据恢复，我们需要先删除您的原有数据。您确定删除吗?</string>
    <string name="image_manage_delete_title_again">您确定进行删除吗？</string>
    <string name="image_manage_delete_ok">删除</string>
    <string name="image_manage_delete_no">不删除</string>
    <string name="image_manage_all_cancel">取消全选</string>
    <string name="image_manage_all">全选</string>
    <string name="image_manage_delete_all">批量删除</string>
    <string name="image_manage_save_as">另存为</string>
    <string name="image_manager_pickup_delete">录像已经删除</string>
    <string name="image_manager_pickup_delete_faild">录像删除失败</string>
    <string name="image_manager_pickup_error">视频文件不存在</string>
    <string name="image_manager_updown">下载</string>
    <string name="image_manager_picture_nothing">没有图片了</string>
    <string name="image_host_state">离线</string>
    <string name="image_Device_list">设备列表</string>
    <string name="tipChooseImage">请选择要下载的图片</string>
    <string name="tipChooseVideo">请选择要下载的视频</string>
    <string name="saveToAlbm">保存到图库</string>
    <string name="saveToCertainFolder">保存到指定文件夹</string>
    <string name="information">资料</string>
    <string name="saveSuccessToAlbm">已经保存至图库</string>
    <string name="saveSuccessToCertainFolder">已经保存至文件夹</string>
    <string name="chooseImageForDelete">请选择要删除的图片</string>
    <string name="chooseVideoForDelete">请选择要删除的视频</string>
    <string name="videoLoading">视频加载中...</string>
    <string name="downloading">正在下载...</string>
    <string name="nodevice">当前没有搜索到设备</string>
    <string name="dbExecFailed">数据操作错误</string>
    <string name="devNameSetSuccessed">设置名称成功</string>
    <string name="enterDevName">请输入设备名称</string>
    <string name="changeDevName">修改设备名称</string>
    <string name="gettingDevStatus">正在获得设备连接状态，请稍后</string>
    <string name="disconnectFromDev">当前平板没有连接到此设备</string>
    <string name="containUnsupportCharacter">请勿包含,或@字符</string>
    <string name="tip">提示</string>
    <string name="exit">确认退出？</string>
    <string name="covermsg">该人员信息已存在数据库，点击确定为覆盖原先的信息，点击取消则不保存，即不覆盖原先信息</string>
    <string name="havemsg">该人员已经采集过图像信息，您确定再次采集吗？</string>
    <string name="photoing">"正在保存图片..."</string>
    <string name="imageacitivty_acetowhite_second">秒/</string>
    <string name="imageacitivty_acetowhite_minute">分钟</string>
    <string name="patient_return">返回</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="setting_picture_save_success">保存成功</string>
    <string name="search_szb">正在搜索主机...</string>
    <string name="patients_information">筛查信息</string>
    <string name="patients_add">信息登记</string>
    <string name="case_title">信息管理</string>
    <string name="setting_title">系统中心</string>
    <string name="user_name">帐户名称:</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password">账户密码:</string>
    <string name="user_password_hint">请输入用户密码</string>
    <string name="user_password_memory">记住密码</string>
    <string name="no_user_account">没有账号？</string>
    <string name="user_register">注册</string>
    <string name="login">登录</string>
    <string name="login_msg">正在登录...</string>
    <string name="quit_program">再按一次退出程序</string>
    <string name="areaLocal">所在地区</string>
    <string name="selectarea">请选择</string>
    <string name="community">社区</string>
    <string name="town">镇</string>
    <string name="streed">街道</string>
    <string name="hospital">医院</string>
    <string name="saveArea">保存地区信息</string>
    <string name="saveAreaMessage">您确定保存地区信息吗？</string>
    <string name="importMessage">导入数据</string>
    <string name="outMessage">导出数据库数据</string>
    <string name="ftpPath">服务器路径设置</string>
    <string name="hpvhad">该HPV码已被使用</string>
    <string name="idhad">该身份证已存在,继续操作将覆盖原有信息，是否继续？</string>
    <string name="idCardAndImage">该身份已存在，并且已获取图像</string>
    <string name="tcthad">该TCT码已存在</string>
    <string name="startline">平分份数</string>
    <string name="file_noexist">文件不存在</string>
    <string name="endline">第几份</string>
    <string name="MandatoryField">必填字段</string>
    <string name="RequiredPhone">手机号码</string>
    <string name="RequiredID">身份证号</string>
    <string name="RequiredHPV">HPV</string>
    <string name="RequiredHPV_Mark">请输入HPV码的标识</string>
    <string name="RequiredHPV_size">请输入HPV码的限制位数</string>
    <string name="RequiredHPV_error">请输入正确的HPV码</string>
    <string name="RequiredHPV_null">HPV码不能为空</string>
    <string name="RequiredCytology">细胞学</string>
    <string name="RequiredCytology_Mark">请输入细胞学码的标识</string>
    <string name="RequiredCytology_size">请输入细胞学码的限制位数</string>
    <string name="RequiredCytology_had">该细胞学码已被使用</string>
    <string name="RequiredCytology_error">请输入正确的细胞学码</string>
    <string name="RequiredCytology_null">细胞学码不能为空</string>
    <string name="RequiredGene">基因检测</string>
    <string name="RequiredGene_Mark">请输入基因检测码的标识</string>
    <string name="RequiredGene_size">请输入基因检测码的限制位数</string>
    <string name="pId">序号</string>
    <string name="pName">姓名</string>
    <string name="title_back">返回</string>
    <string name="title_sure">确定</string>
    <string name="setting_screenid">筛查ID</string>
    <string name="setting_error_show_msg">错误信息</string>
    <string name="setting_Treasures_of_vision_wifi">视珍宝WIFI</string>
    <string name="setting_printer_wifi">局域网WIFI</string>
    <string name="setting_WIFI_filters">WIFI过滤：</string>
    <string name="setting_WIFI_name">WIFI名称：</string>
    <string name="setting_WIFI_filters_hint">请输入需要搜索的WIFI名称部分字段</string>
    <string name="setting_WIFI_name_hint">请输入WIFI名称</string>
    <string name="setting_WIFI_password">WIFI密码：</string>
    <string name="setting_WIFI_password_hint">请输入WIFI密码</string>
    <string name="clear_wifi">清除</string>
    <string name="save_wifi">保存</string>
    <string name="patient_data_no">暂无数据</string>
</resources>