<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_item"></include>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_wifisetting_getImageSoft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_select"
            android:text="@string/setting_Treasures_of_vision_wifi"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_wifisetting_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_select"
            android:text="@string/setting_printer_wifi"
            android:textAllCaps="false"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/setting_WIFI_filters"
            android:textAllCaps="false"
            android:textSize="@dimen/textViewNameSize" />

        <EditText
            android:id="@+id/edit_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/setting_WIFI_filters_hint"
            android:textAllCaps="false"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/setting_WIFI_name"
            android:textAllCaps="false"
            android:textSize="@dimen/textViewNameSize" />

        <EditText
            android:id="@+id/edit_wifiSetting_name01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/setting_WIFI_name_hint"
            android:textAllCaps="false"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/setting_WIFI_password"
            android:textAllCaps="false"
            android:textSize="@dimen/textViewNameSize" />

        <EditText
            android:id="@+id/edit_wifiSetting_pass01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/setting_WIFI_password_hint"
            android:textAllCaps="false" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_wifiSetting_clear01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/clear_wifi"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_wifiSetting_save01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/save_wifi"
            android:textAllCaps="false" />
    </RelativeLayout>



</LinearLayout>