<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/LinerHeight"
    android:background="@drawable/title_shape">

    <Button
        android:id="@+id/btn_left"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:text="@string/title_back"
        android:textSize="@dimen/textSizetitle"
        android:visibility="gone"
        android:background="@drawable/btn_bg"
        />

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/login"
        android:textColor="#000"
        android:textSize="@dimen/textSizetitle"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/title_sure"
        android:textSize="@dimen/textSizetitle"
        android:visibility="gone"
        android:background="@drawable/btn_bg"

        />

</RelativeLayout>