<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/layTop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/weakRed1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/image_setting_STA"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:onClick="back"
            android:text="@string/patient_return"
            android:textAllCaps="false"></Button>

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:text="@string/image_setting_refresh"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"></Button>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layTop">

        <Spinner
            android:id="@+id/sp_wifi_ssid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:textAllCaps="false" />

        />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_wifi_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_wifi_ssid"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/image_setting_STA_wifi_password"
            android:textAllCaps="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_wifi_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textColor="#969696"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_sta"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/layout_wifi_pwd"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/weakRed1"
            android:text="@string/button_ok"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>


